plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.107'
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            // 使用 clientData 运行配置；具体生成内容由事件中注册的 Provider 决定
            clientData()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// 不直接将 datagen 目录声明为资源源，避免与 runData/compile 形成依赖环。
// datagen 产物通过下方的 mergeGeneratedResources 任务在打包前合并进入 build 目录。


dependencies {
    // Example mod dependency with JEI
    // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
    // compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
    // compileOnly "mezz.jei:jei-${mc_version}-forge-api:${jei_version}"
    // runtimeOnly "mezz.jei:jei-${mc_version}-forge:${jei_version}"

    // Example mod dependency using a mod jar from ./libs with a flat dir repository
    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
    // The group id is ignored when searching -- in this case, it is "blank"
    // implementation "blank:coolmod-${mc_version}:${coolmod_version}"

    // Example mod dependency using a file as dependency
    // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")

    // Example project dependency using a sister or child project:
    // implementation project(":myproject")

    // For more info:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

// 生成资产目录（供清理与输出声明使用）
def generatedAssetsDir = file("src/main/resources/assets/${project.mod_id}/textures/gui")

// 清理已生成资产（可选）
tasks.register('cleanGeneratedAssets', Delete) {
    group = 'assets'
    description = '删除由构建脚本生成的资源目录（textures/gui）'
    delete generatedAssetsDir
}

tasks.register('buildAssets', Exec) {
    group = 'assets'
    description = '运行 src/main/resources/buildassets.sh 以生成资源'
    workingDir file('src/main/resources')
    commandLine 'bash', 'buildassets.sh'
    dependsOn 'cleanGeneratedAssets'

    // 增量构建：声明输入与输出，确保变更时会重新运行
    inputs.files(
            file('src/main/resources/buildassets.sh'),
            file('src/main/resources/build_assets.py'),
            file('src/main/resources/buildconfig.json'),
            file('src/main/resources/packbig.png')
    )
    outputs.dir(generatedAssetsDir)
}

// 仅在 runClient / build 前生成 GUI 资产，避免与 runData 的依赖链形成环
tasks.named('runClient') { dependsOn 'buildAssets' }
tasks.named('build') { dependsOn 'buildAssets' }

// 声明 processResources 明确依赖 buildAssets，消除 Gradle 关于隐式依赖的校验错误
tasks.named('processResources') {
    dependsOn 'buildAssets'
    // 不直接依赖 runData，避免与 classes/compile 形成隐式环
    // 避免资源重复（例如 datagen 与手写资源重名）导致失败
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    // 不将本地虚拟环境与构建脚本打入资源
    exclude('.venv-assets/**')
    exclude('build_assets.py')
    exclude('buildassets.sh')
    exclude('buildconfig.json')
    exclude('gui_big.png')
    exclude('items_blocks_big.png')
}

// 如需在更多任务前生成资产，可启用下方示例（可能导致 runData 环依赖，谨慎开启）
// 示例：
// [tasks.named('processResources'),
//  tasks.named('classes'),
//  tasks.named('compileJava'),
//  tasks.named('jar')
// ].each { provider ->
//     provider.configure { dependsOn 'buildAssets' }
// }
// 注意：千万不要对 'downloadAssets' 或 'prepareClientRun' 添加 dependsOn 'buildAssets'，
// 否则会出现 runData -> prepareDataRun -> downloadAssets -> buildAssets -> runData 的循环。

// 将 datagen 产物合并进构建资源目录，避免环依赖（classes -> processResources -> runData -> classes）
tasks.register('mergeGeneratedResources', Copy) {
    group = 'datagen'
    description = '拷贝 src/generated/resources 到 build/resources/main 以包含在打包中'
    dependsOn 'runData'
    from 'src/generated/resources'
    into "$buildDir/resources/main"
}

tasks.named('jar') { dependsOn 'mergeGeneratedResources' }
tasks.named('build') {
    dependsOn 'mergeGeneratedResources'
    // 确保在 build 之前优先执行 runData
    dependsOn 'runData'
}

// 开发环境：运行客户端前先生成数据，确保标签/模型等可用
tasks.named('runClient') {
    dependsOn 'runData'
    dependsOn 'mergeGeneratedResources'
}

// 确保将 datagen 产物覆盖到 build/resources/main 发生在 processResources 之后，避免顺序不确定导致旧模型残留
tasks.named('mergeGeneratedResources') { mustRunAfter tasks.named('processResources') }
